# MirCurrencyRateTelegramBot

./: .gitignore  config.py  currency_rate_handle.py  currency_rate_parse.py  main.py  pyproject.toml  readme.md  requirements.txt
