[tool.poetry]
name = "mircurrencyratetelegrambot"
version = "0.1.0"
description = ""
authors = ["Сергей Хадкевич <s.hadkevich@agima.ru>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "~3.10"
pytelegrambotapi = "4.12.0"
python-dotenv = "1.0.0"
beautifulsoup4 = "4.12.2"
#lxml = "4.9.2"
cachetools = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
